--- a/app/views/public/members/edit.html.erb
+++ b/app/views/public/members/edit.html.erb
@@ -1,2 +1,34 @@
-<h1>Public::Members#edit</h1>
-<p>Find me in app/views/public/members/edit.html.erb</p>
+<h1>プロフィールの変更</h1>
+<%= form_with model: @member, url: member_path(@member), method: :patch do |f| %>
+  <div class="form-group">
+    <label>プロフィール画像</label>
+    <%= f.file_field :profile_image, accept: 'image/*', class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <label>ニックネーム</label>
+    <%= f.text_field :name, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <label>性別</label>
+    <%= f.select :gender, {'男性': 0, '女性': 1}, { include_blank: "指定なし" }, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <label>身長</label>
+    <%= f.select :height, *[120..200], { include_blank: "指定なし" }, class: "form-control" %>cm
+  </div>
+
+  <div class="form-group">
+    <label>メールアドレス</label>
+    <%= f.email_field :email, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <label>自己紹介</label>
+    <%= f.text_area :body, class: "form-control" %>
+  </div>
+
+  <%= f.submit "保存" %>
+<% end %>
