--- a/app/views/public/members/show.html.erb
+++ b/app/views/public/members/show.html.erb
@@ -1,2 +1,30 @@
-<h1>Public::Members#show</h1>
-<p>Find me in app/views/public/members/show.html.erb</p>
+<h1>マイページ</h1>
+<table>
+  <thead>
+    <tr>
+      <th></th>
+      <th>名前</th>
+      <th>性別</th>
+      <th>身長</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><%= image_tag @member.get_profile_image, class: "profile_image_show" %></td>
+      <td><%= @member.name %></td>
+      <td><%= @member.get_gender %></td>
+      <td>
+        <% if @member.height.present? %>
+          <%= @member.height %>cm
+        <% end %>
+      </td>
+    </tr>
+  </tbody>
+</table>
+<section>自己紹介<section>
+<p><%= @member.body %></p>
+
+<% if @member == current_member %>
+  <%= link_to "プロフィール変更", edit_member_path(@member) %>
+  <%= link_to "コーディネート登録", new_post_path %>
+<% end %>
