--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,2 +1,29 @@
-<h1>Public::Posts#index</h1>
-<p>Find me in app/views/public/posts/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <h1>コーディネート一覧</h1>
+    <div class="col-md-3"></div>
+    <div class="col-md-9">
+      <div class="row">
+        <% @posts.each do |post| %>
+          <div class="col-lg-4 col-sm-6 g-5">
+            <div class="card">
+              <%= link_to post_path(post) do %>
+                <%= image_tag post.outfit_image, class: "outfit_image_index" %>
+              <% end %>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">
+                  <%= link_to member_path(post.member_id) do %>
+                    <%= image_tag post.member.profile_image, class: "profile_image_li" %>
+                  <% end %>
+                  <%= post.member.name %>
+                  <%= post.member.height %>cm
+                </li>
+                <li class="list-group-item">A second item</li>
+              </ul>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
