--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,8 +1,20 @@
 @import '~bootstrap/scss/bootstrap';
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
 
+:root {
+  --body: #f5f5f5;
+  --light-text: #888;
+}
+
 body {
-  background: #f5f5f5;
+  background: var(--body);
+  color: #333;
+  line-height: 1.6;
+}
+
+a {
+  text-decoration: none;
+  color: #333;
 }
 
 img {
@@ -51,4 +63,15 @@ img {
   border-radius: 3px;
   border: 1px #ddd solid;
   padding: 20px 0 0 23px;
+}
+
+.text_box {
+  display: table-cell;
+  vertical-align: top;
+  max-width: 362px;
+  font-size: 13px;
+  padding: 8px 15px 8px 15px;
+  border-radius: 0 6px 6px 6px;
+  border: 1px #ddd solid;
+  background: #f6f7f8;
 }
