--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -29,10 +29,12 @@ img {
 
 .profile_image_li {
   width: 40px;
+  height: 40px;
 }
 
 .profile_image_top{
   width: 48px;
+  height: 48px;
 }
 
 .profile_image_index {
