論理削除実装

--- a/app/views/public/members/index.html.erb
+++ b/app/views/public/members/index.html.erb
@@ -24,7 +24,7 @@
         </td>
         <td><%= member.get_gender %></td>
         <td><%= member.height %></td>
-        <td id="follow_btn">
+        <td id="follow_btn_<%= member.id %>">
           <%= render "public/relationships/follow", member: member %>
         </td>
       </tr>
