--- a/app/views/public/relationships/destroy.js.erb
+++ b/app/views/public/relationships/destroy.js.erb
@@ -1,2 +1,2 @@
-$("#follow_btn").html("<%= j(render "follow", member: @member) %>");
+$("#follow_btn_<%= @member.id %>").html("<%= j(render "follow", member: @member) %>");
 
