--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,14 @@
     </header>
 
     <main>
+      <!--フラッシュメッセージ-->
+      <% if flash[:notice] %>
+        <p id="notice" class="alert alert-success m-0"><%= notice %></p>
+       <% end %>
+       <% if flash[:alert] %>
+        <p id="alert" class="alert alert-danger m-0"><%= alert %></p>
+       <% end %>
+
       <%= yield %>
     </main>
 
