--- a/app/views/public/relationships/create.js.erb
+++ b/app/views/public/relationships/create.js.erb
@@ -1,1 +1,1 @@
-$("#follow_btn").html("<%= j(render "follow", member: @member) %>");
+$("#follow_btn_<%= @member.id %>").html("<%= j(render "follow", member: @member) %>");
