--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">MyFashion</a>
+    <a class="navbar-brand" href="/">MyFashion</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -8,7 +8,7 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <% if member_signed_in? %>
           <li class="nav-item">
-            <%= link_to "コーデ一覧", root_path, class: "nav-link" %>
+            <%= link_to "コーデ一覧", posts_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
             <%= link_to "ユーザー一覧", members_path, class: "nav-link" %>
@@ -36,10 +36,12 @@
       </ul>
 
       <!--検索フォーム-->
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+      <%= search_form_for @q, url: search_members_path, class: "d-flex" do |f| %>
+        <%= f.search_field :name_cont, class: "form-control me-2", placeholder: "ユーザーを探す" %>
+
+        <%= f.submit "検索", class: "btn btn-outline-success" %>
+      <% end %>
     </div>
   </div>
 </nav>
+
