タグ機能追加

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -91,3 +91,14 @@ img {
   border-radius: 3px;
   border: 1px #ddd solid;
 }
+
+.tag_box {
+  // display: block;
+  width: 50px;
+  background: #fff;
+  color: #333;
+  border: 1px #e2e2e2 solid;
+  padding: 6px 12px 6px 12px;
+  line-height: 1.2;
+  border-radius: 2px;
+}
