--- a/app/views/public/members/index.html.erb
+++ b/app/views/public/members/index.html.erb
@@ -6,7 +6,7 @@
         <div class="member_info d-flex">
           <div class="profile_image_index">
             <%= link_to member_path(member) do %>
-              <%= image_tag member.get_profile_image %>
+              <%= image_tag member.get_profile_image, class: "profile_image_index" %>
             <% end %>
           </div>
           <div class="member_text">
