--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -41,6 +41,11 @@
 
         <%= f.submit "検索", class: "btn btn-outline-success" %>
       <% end %>
+      <%= search_form_for @search_post, url: search_posts_path, class: "d-flex" do |f| %>
+        <%= f.search_field :tags_name_cont, class: "form-control me-2", placeholder: "コーディネートを探す" %>
+
+        <%= f.submit "検索", class: "btn btn-outline-success" %>
+      <% end %>
     </div>
   </div>
 </nav>
