--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,67 +1,102 @@
 @import '~bootstrap/scss/bootstrap';
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
 
-:root {
-  --body: #f5f5f5;
-  --light-text: #888;
-}
+//// 初期設定 ////
+  :root {
+    --body: #f5f5f5;
+    --light-text: #888;
+  }
 
-body {
-  background: var(--body);
-  color: #333;
-  line-height: 1.6;
-}
+  body {
+    background: var(--body);
+    color: #333;
+    line-height: 1.6;
+    font-size: 16px;
+    font-weight: 300;
+  }
 
-a {
-  text-decoration: none;
-  color: #333;
-}
+  a {
+    text-decoration: none;
+    color: #333;
+  }
 
-p {
-  margin-bottom: 0;
-}
+  p {
+    margin-bottom: 0;
+    font-size: 13px;
+  }
 
-img {
-  max-width: 100%;
-  height: auto;
-  background-size: cover;
-  background-position: center;
-  object-fit: cover;
-  border-radius: 50%;
-  border: 1px #ddd solid;
-}
+  img {
+    max-width: 100%;
+    height: auto;
+    background-size: cover;
+    background-position: center;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 1px #ddd solid;
+  }
 
-.profile_image_li {
-  width: 40px;
-  height: 40px;
-}
+  #title_top {
+    padding: 18px 0 30px 0;
+    background: #fff;
+    min-height: 133px;
+    border-bottom: 1px #ddd solid;
+    position: relative;
+  }
 
-.profile_image_top{
-  width: 48px;
-  height: 48px;
-}
+//// 画像系 ////
+  .profile_image_li {
+    width: 40px;
+    height: 40px;
+  }
 
-.profile_image_index {
-  width: 70px;
-  height: 70px;
-}
+  .profile_image_top{
+    width: 48px;
+    height: 48px;
+  }
 
-.profile_image_show {
-  width: 150px;
-  height: 150px;
-}
+  .profile_image_index {
+    width: 70px;
+    height: 70px;
+  }
 
-.outfit_image_index {
-  width: 100%;
-  height: 100%;
-  border-radius: 2px 2px 0 0;
-  border: none;
-}
+  .profile_image_show {
+    width: 150px;
+    height: 150px;
+  }
 
-.outfit_image_show {
-  max-width: 550px;
-  border-radius: 2px 2px 0 0;
-  border: none;
+  .outfit_image_index {
+    width: 100%;
+    height: 100%;
+    border-radius: 2px 2px 0 0;
+    border: none;
+  }
+
+  .outfit_image_show {
+    max-width: 550px;
+    border-radius: 2px 2px 0 0;
+    border: none;
+  }
+
+//// 新規投稿、ログインフォーム ////
+  #login-box {
+    position: relative;
+    margin: 5% auto;
+    padding: 40px;
+    width: 600px;
+    height: auto;
+    box-shadow: 0 2px 4px #4b4b4b;
+  }
+
+  h1 {
+    margin-top: 0;
+    margin-bottom: 20px;
+    font-weight: 300;
+    font-size: 28px;
+  }
+
+// ユーザー //
+.title_text h1 {
+  font-size: 24px;
 }
 
 .coordinate_info {
@@ -102,3 +137,10 @@ img {
   line-height: 1.2;
   border-radius: 2px;
 }
+
+
+
+
+
+
+
