--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,34 +1,32 @@
-<h2>Sign up</h2>
+<div class="container text-center">
+  <div class="row">
+    <div id="login-box">
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      　<%= render "public/shared/error_messages", resource: resource %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "public/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
+　　　　<div class="row">
+          <div class="col-8 offset-2">
+            <h1>新期会員登録</h1>
+            <div class="form-group mb-3">
+              <%= f.text_field :name, placeholder: "ニックネーム", class: "form-control" %>
+            </div>
+            <div class="form-group mb-3">
+              <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "メールアドレス", class: "form-control" %>
+            </div>
+            <div class="form-group mb-3">
+              <%= f.password_field :password, autocomplete: "new-password", placeholder: "パスワード(6文字以上)", class: "form-control" %>
+            </div>
+            <div class="form-group mb-3">
+              <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "パスワード(確認用)", class: "form-control" %>
+            </div>
+            <div class="actions">
+              <%= f.submit "登録する", class: "btn btn-secondary" %>
+            </div>
+            <p class="mt-2">アカウントをお持ちの方</p>
+            <%= link_to "ログインする", new_member_session_path, class: "btn btn-primary" %>
+          </div>
+        </div>
+      <% end %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "public/shared/links" %>
+</div>
