--- a/app/views/public/members/show.html.erb
+++ b/app/views/public/members/show.html.erb
@@ -23,18 +23,12 @@
           </div>
           <% if @member == current_member %>
             <div class="btn_area d-flex justify-content-between mt-3">
-              <div>
-                <%= link_to "プロフィール変更", edit_member_path(@member), class: "btn btn-secondary" %>
-              </div>
-              <div>
-                <%= link_to "コーディネート登録", new_post_path, class: "btn btn-primary" %>
-              </div>
-              <div>
-                <%= link_to "退会について", withdraw_confirm_member_path(@member), class: "btn btn-danger" %>
-              </div>
+              <%= link_to "プロフィール変更", edit_member_path(@member), class: "btn btn-secondary" %>
+              <%= link_to "コーディネート検索", new_post_path, class: "btn btn-primary" %>
+              <%= link_to "退会について", withdraw_confirm_member_path(@member), class: "btn btn-danger" %>
             </div>
           <% else %>
-            <div id="follow_btn_<%= @member.id %>">
+            <div id="follow_btn_<%= @member.id %>" class="mt-3 ms-3">
               <%= render "public/relationships/follow", member: @member %>
             </div>
           <% end %>
@@ -44,6 +38,7 @@
   </div>
 </header>
 
+<!--ユーザーの投稿一覧-->
 <div class="container mt-3">
   <div class="row">
     <div class="col-md-6 offset-md-3">
@@ -70,7 +65,7 @@
     </div>
   </div>
   <div class="row">
-    <% if @member.posts.count == 0 %>
+    <% if @member == current_member && @member.posts.count == 0 %>
       <div class="pt-5 text-center">
         <h4>コーディネートを投稿してみよう！</h4>
         <p>
@@ -78,6 +73,10 @@
           自分のコーデを共有しよう！
         </p>
       </div>
+      <% elsif @member != current_member && @member.posts.count == 0 %>
+        <div class="pt-5 text-center">
+          <h4>まだ投稿がありません</h4>
+        </div>
     <% else %>
       <% @member.posts.each do |post| %>
         <div class="col-md-3 g-5">
@@ -100,5 +99,4 @@
     <% end %>
   </div>
 </div>
-
 
