--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -9,8 +9,17 @@
     <label>コーディネートのポイント</label>
     <%= f.text_area :body, class: "form-control" %>
   </div>
-  
-  
+
+  <div class='form-group'>
+    <%= f.collection_check_boxes(:tag_ids, Tag.all, :id, :name) do |tag| %>
+      <div class='form-check'>
+        <%= tag.label class: 'form-check-label' do %>
+          <%= tag.check_box class: 'form-check-input' %>
+          <%= tag.text %>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
 
   <%= f.submit "投稿する" %>
 <% end %>
