--- a/app/views/public/members/index.html.erb
+++ b/app/views/public/members/index.html.erb
@@ -1,42 +1,15 @@
-<div class="container">
-  <h1>ユーザー一覧</h1>
-  <ul>
-    <% @members.each do |member| %>
-      <li id="member_list">
-        <div class="member_info d-flex">
-          <div class="profile_image_index">
-            <%= link_to member_path(member) do %>
-              <%= image_tag member.get_profile_image, class: "profile_image_index" %>
-            <% end %>
-          </div>
-          <div class="member_text">
-            <h3 class="name">
-              <%= link_to member_path(member) do %>
-                <%= member.name %>
-              <% end %>
-            </h3>
-            <p>
-              <span><%= member.get_gender %></span>
-              <span><%= member.get_height %></span>
-            <p>
-            <p>
-              <span>
-                <%= link_to member_path(member) do %>
-                  <%= member.posts.count %>コーディネート
-                <% end %>
-              </span>
-              <span>
-                <%= link_to followers_member_path(member) do %>
-                  <%= member.followers.count %>フォロワー
-                <% end %>
-              </span>
-            </p>
-          </div>
+<header id="title_top">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 offset-md-2 d-flex justify-content-between">
+        <h1>ユーザー一覧</h1>
+        <div class="all_member">
+          <h2 class="ps-3"><%= @members.count %><span>件</span></h2>
         </div>
-        <div id="follow_btn_<%= member.id %>">
-          <%= render "public/relationships/follow", member: member %>
-        </div>
-      </li>
-    <% end %>
-  </ul>
-</div>
+      </div>
+    </div>
+  </div>
+</header>
+
+<!--ユーザー一覧-->
+<%= render "index", members: @members %>
