--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -7,16 +7,16 @@
 　　　　<div class="row">
           <div class="col-8 offset-2">
             <h1>新期会員登録</h1>
-            <div class="form-group mb-3">
+            <div class="form-group mb-3 d-grid">
               <%= f.text_field :name, placeholder: "ニックネーム", class: "form-control" %>
             </div>
-            <div class="form-group mb-3">
+            <div class="form-group mb-3 d-grid">
               <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "メールアドレス", class: "form-control" %>
             </div>
-            <div class="form-group mb-3">
+            <div class="form-group mb-3 d-grid">
               <%= f.password_field :password, autocomplete: "new-password", placeholder: "パスワード(6文字以上)", class: "form-control" %>
             </div>
-            <div class="form-group mb-3">
+            <div class="form-group mb-3 d-grid">
               <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "パスワード(確認用)", class: "form-control" %>
             </div>
             <div class="actions">
