--- a/app/views/public/relationships/_follow.html.erb
+++ b/app/views/public/relationships/_follow.html.erb
@@ -1,5 +1,15 @@
 <% if member.followed_by?(current_member) %>
-  <%= link_to "フォロー中", member_relationships_path(member), method: :delete, remote: true, class: "btn btn-danger" %>
+  <%= link_to member_relationships_path(member), method: :delete, remote: true, class: "follow-btn btn btn-danger px-3" do %>
+    <div class="text-center">
+      <i class="fa-solid fa-user-check"></i>
+    </div>
+    <span>フォロー中</span>
+  <% end %>
 <% else %>
-  <%= link_to "フォローする", member_relationships_path(member), method: :post, remote: true, class: "btn btn-success" %>
+  <%= link_to member_relationships_path(member), method: :post, remote: true, class: "follow-btn btn btn-primary" do %>
+    <div class="text-center">
+      <i class="fa-solid fa-user-plus"></i>
+    </div>
+    <span>フォローする</span>
+  <% end %>
 <% end %>
