--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -227,7 +227,7 @@
 }
 
 .follow-btn span {
-  font-size: 10px;
+  font-size: 16px;
 }
 
 .gender-nav nav {
@@ -249,6 +249,15 @@
   border-radius: 2px;
 }
 
+// ページネーション//
+.pagination {
+  margin-top: 50px;
+  justify-content: end;
+}
+.pagination li {
+  margin: 0;
+  padding: 0;
+}
 
 
 
