--- a/app/views/public/members/_index.html.erb
+++ b/app/views/public/members/_index.html.erb
@@ -49,6 +49,7 @@
                 </li>
               <% end %>
             </ul>
+            <%= paginate @members %>
           </div>
         </div>
       </div>
